--- a/Callaghan_et_al_2016_CJFAS.Rmd
+++ b/Callaghan_et_al_2016_CJFAS.Rmd
@@ -21,13 +21,8 @@ Authors: David Thomas Callaghan^1^*, Paul James Blanchfield^1,2^, Matt M. Guzzo^
 
 *Corresponding Author Email: callagdt@myumanitoba.ca
 
-<<<<<<< HEAD
-Dave Dave DAVE Dave
-=======
-Dave Dave Dave
->>>>>>> 120d10f45497910ba7ea22d800e58ac29dce4db8
 
-#Abstract
+##Abstract
 
 This thesis investigates lake trout (*Salvelinus namaycush*) reproduction northern lakes. Lake trout have a broad distribution across Canada's North, yet most studies that describe reproductive habitat are from the southern extent of their range. I first assessed whether lake trout spawning habitat, typically characterized as wave-swept shoals with clean cobble that face predominant wind directions, is similar for a northern lake. Specifically, I examined a dozen sites around Alexie Lake, Northwest Territories, to test if physical habitat and wind exposure were important determinants of spawning site use and embryonic survival. Spawning occurred in ~2 m water depth, on 3–15 cm diameter clean substrate found on the leading edge of shoals that ended in a rock crib rising abruptly in nearshore regions around the lake. Wind direction was predominantly from the west, although it was highly variable within and among spawning seasons. I found evidence of lake trout spawning at each site examined, but not limited to shoals facing a predominate wind direction. High variation in embryonic survival (2–83%) from incubation trays was observed among spawning sites, suggesting a large gradient in habitat quality exists within a given lake. Modelled wind exposure did not predict embryonic survival, nor did physical characteristics that may influence interstitial water flow on spawning shoals. 
   I also provide a detailed description of the lake trout mating system at the whole lake scale in a typical northern boreal lake. Using an acoustic telemetry monitoring system and a novel spatial temporal clustering analysis, I was able to quantify lake trout spawning movements and behaviours over the course of an entire spawning season. Lake trout were found to cluster on spawning shoals virtually around the entire nearshore region of Alexie Lake, as well as around several islands, which appears to further confirm previous findings that subtable spawning habitat is abundant in Alexie Lake. Males arrived earlier than females and spent longer durations on spawning shoals over the course of the spawning season. Males formed >4 times as many spawing clusters and visited more sites than females. Spawning clusters predominantly were formed at night but were also observed during daylight hours, especially during the peak spawning season. I found males may exert more energy than females during the spawning season, with males showing higher activity rates and longer periods spent on spawning shoals than females, in spite of similar daily travel distances between sexes. Overall, females performed more linear movements over the course of the spawning season suggesting a searching behaviour, while males were less persitent and more random in there movements. Our findings challenge the conventional role of wind as a predominant predictor of lake trout spawning site quality. We propose that the unpredictable nature of wind and abundance of suitable habitat may favour lake-wide spawning by lake trout as a bet-hedging strategy in northern lakes with limited fetch.
