--- a/Summary.Rmd
+++ b/Summary.Rmd
@@ -31,36 +31,11 @@ spawn.num.14<-spawn.num[spawn.num$YEAR==2014,]
 
 
 peakdates<-function(date,freq){
-  
-  p<-data.frame(DATE=NULL,
-                COUNT=NULL,
-                DAYS=NULL)
-  
   data<-data.frame(DATE=date,
                     FREQ=freq)
+  peak<-data.frame(START=min(data$DATE[data$FREQ>=(max(data$FREQ)/2)]),
+                   END=max(data$DATE[data$FREQ>=(max(data$FREQ)/2)]))
   
-  for(i in 1:dim(data)[1]){
-    data2<-data[i:dim(data)[1],]
-    c50<-sum(data$FREQ)*0.5
-    count<-sum(data2$FREQ[which(!cumsum(data2$FREQ)>c50)])
-    days<-length(which(!cumsum(data2$FREQ)>c50))
-    end<-dim(data2)[1]
-    
-    if(end>days){
-      if((count+data2$FREQ[days+1])>c50){
-        days=days
-      }else{
-        days=days=0
-      }
-      
-    }else{
-      days=0
-    }
-    p<-rbind(p,data.frame(DATE=data$DATE[i],COUNT=count,DAYS=days))
-  }
-  peak<-data.frame(START=min(p$DATE[p$DAYS==min(p$DAYS[p$DAYS>0])]),
-                   END=min(p$DATE[p$DAYS==min(p$DAYS[p$DAYS>0])])+min(p$DAYS[p$DAYS>0])*24*60*60)
-  print(peak)
 }
 
 peakdates.12<-peakdates(date=spawn.num.12$DATE,freq=spawn.num.12$FREQ)
@@ -115,13 +90,13 @@ xyz<-make.xyz(x=data$CLUST.X,y=data$CLUST.Y,z=data$FREQ,group=data$YEAR)
 plot(shore_outline)
   
 draw.pie(z=xyz$z, x=xyz$x, y=xyz$y, 
-        radius=100, col=c(alpha("blue", 0.8), alpha("red", 0.8), alpha("yellow", 0.8)),
-        border=c(alpha("blue", 0.8), alpha("red", 0.8), alpha("yellow", 0.8))) 
+        radius=100, col=c(alpha("#AEC6CF", 0.7), alpha("#FF6961", 0.7), alpha("#FDFD96", 0.7)),
+        border=c(alpha("#AEC6CF", 1), alpha("#FF6961", 1), alpha("#FDFD96", 1))) 
 
 text(650800,6954500, "Year",font=2) 
 legend.pie(650800,6954300, labels=c("2012","2013","2014"), radius = 100,
-           bty="n", col=c(alpha("blue", 0.8), alpha("red", 0.8), alpha("yellow", 0.8)),
-           border=c(alpha("blue", 0.8), alpha("red", 0.8), alpha("yellow", 0.8)),
+           bty="n", col=c(alpha("#AEC6CF", 0.7), alpha("#FF6961", 0.7), alpha("#FDFD96", 0.7)),
+           border=c(alpha("#AEC6CF", 1), alpha("#FF6961", 1), alpha("#FDFD96", 1)),
            label.dist=1.7)
 
 text(650800,6954000, "Frequency",font=2) 
@@ -198,112 +173,6 @@ legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
 ```
 
 ```{r}
-
-m<-matrix(c(1,1,2,
-            1,1,2,
-            3,3,4,
-            3,3,4,
-            5,5,6,
-            5,5,6,
-            7,7,7),3,7)
-layout(m)
-
-
-#determine max frequency
-max.all<-max(first.clust$FREQ)
-
-#2012 - 1
-data<-filter(first.clust,YEAR==2012)
-#determine scaling factor
-s=max(data$FREQ)/max.all
-
-plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
-
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-         maxradius=200*s, col=alpha("lightblue", 0.3),pch=19)
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("blue",0.3))
-
-
-legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
-              col=alpha("lightblue",0.3), txt.cex = 0.7, txt.col="transparent")
-legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
-              col=alpha("blue",0.3),txt.cex = 0.7, txt.col = alpha("blue",0.3))
-
-
-#2012 spawn dates - 2
-plot(FREQ~DATE,data=spawn.num.12,ylim=c(0,50),
-     xlim=as.POSIXct(c("2012-08-15","2012-10-15"),format="%Y-%m-%d", tz="MST"),type="h",col="grey",
-     lwd=6,lend=2)
-lines(c(peakdates.12$START-12*60*60,peakdates.12$START-12*60*60),c(-1,50))
-lines(c(peakdates.12$END+12*60*60,peakdates.12$END+12*60*60),c(-1,50))
-
-
-
-#2013 - 3
-data<-filter(first.clust,YEAR==2013)
-#determine scaling factor
-s=max(data$FREQ)/max.all
-plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
-
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("lightblue", 0.3),pch=19)
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("blue",0.3))
-
-
-legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
-              col=alpha("lightblue",0.3), txt.cex = 0.7, txt.col="transparent")
-legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
-              col=alpha("blue",0.3),txt.cex = 0.7, txt.col = alpha("blue",0.3))
-
-
-#2013 spawn dates - 4
-plot(FREQ~DATE,data=spawn.num.13,ylim=c(0,50),
-     xlim=as.POSIXct(c("2013-08-15","2013-10-15"),format="%Y-%m-%d", tz="MST"),type="h",col="grey",
-     lwd=6,lend=2)
-lines(c(peakdates.13$START-12*60*60,peakdates.13$START-12*60*60),c(-1,50))
-lines(c(peakdates.13$END+12*60*60,peakdates.13$END+12*60*60),c(-1,50))
-
-
-
-#2014 - 5
-data<-filter(first.clust,YEAR==2014)
-#determine scaling factor
-s=max(data$FREQ)/max.all
-
-plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
-
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("lightblue", 0.3),pch=19)
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("blue",0.3))
-
-
-legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
-              col=alpha("lightblue",0.3), txt.cex = 0.7, txt.col="transparent")
-legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
-              col=alpha("blue",0.3),txt.cex = 0.7, txt.col = alpha("blue",0.3))
-
-#2014 spawn dates - 6
-plot(FREQ~DATE,data=spawn.num.14,ylim=c(0,50),
-     xlim=as.POSIXct(c("2014-09-01","2014-10-01"),format="%Y-%m-%d", tz="MST"),type="h",col="grey",
-     lwd=6,lend=2)
-lines(c(peakdates.14$START-12*60*60,peakdates.14$START-12*60*60),c(-1,50))
-lines(c(peakdates.14$END+12*60*60,peakdates.14$END+12*60*60),c(-1,50))
-
-
-data<-table(ltspawnclust$YEAR,ltspawnclust$SITE)
-data<-data[,order(colSums(data))]
-
-
-
-barplot(data,horiz=TRUE,col=c(alpha("blue",.10),alpha("blue",.50),alpha("blue",1)),
-        border=alpha("blue",0.3))
-
-
-```
-```{r}
 data<-spawntable[spawntable$MONTH==9,]
 data$ACCEL.SD[is.nan(data$ACCEL.SD)]<-"-"
 data$ACCEL.MEAN[is.nan(data$ACCEL.MEAN)]<-"-"
@@ -314,64 +183,7 @@ kable(data)
 #select only males or females
 data<-daily[daily$MONTH==9 & (daily$SEX=="M" | daily$SEX=="F"),]
 
-#Daily displacement
-hist(sqrt(data$STEPLENGTH))
 
-
-boxplot(sqrt(STEPLENGTH)~SEX*YEAR,data)
-
-want data$YEAR<-as.factor(data$YEAR)
-data$TRANSMITTER<-as.factor(data$TRANSMITTER)
-data$SEX<-as.factor(data$SEX)
-#REML= FALSE necessary to do likelihood ratio test
-fit.dd.full<-lmer(sqrt(STEPLENGTH)~SEX+(1|TRANSMITTER)+(1|YEAR),data=data, REML=FALSE)
-fit.dd.null<-lmer(sqrt(STEPLENGTH)~1+(1|TRANSMITTER)+(1|YEAR),data=data, REML=FALSE)
-
-anova(fit.dd.full,fit.dd.null)
-qqnorm(resid(fit.dd.full))
-summary(fit.dd.full)
-#look at residuals
-plot(fit.dd.full)
-#normality of residuals
-hist(residuals(fit.dd.full))
-
-coef(fit.dd.full)
-
-
-
-#Persistence index
-
-hist(data$PERSINDEX)
-
-boxplot(PERSINDEX~SEX*YEAR,data)
-
-fit.pi.full<-lmer(PERSINDEX~SEX+(1|TRANSMITTER)+(1|YEAR),data=data, REML=FALSE)
-fit.pi.null<-lmer(PERSINDEX~1+(1|TRANSMITTER)+(1|YEAR),data=data, REML=FALSE)
-anova(fit.pi.full,fit.pi.null)
-summary(fit.pi.full)
-hist(residuals(fit.pi.full))
-
-#Acceleration
-
-data.ac<-data[data$YEAR!=2012,]
-levels(data.ac$YEAR)<-c("2013","2014")
-hist(log(data.ac$ACCEL))
-boxplot(ACCEL~SEX*YEAR,data.ac)
-
-
-fit.ac.full<-lmer(log(ACCEL)~SEX+YEAR+(1|TRANSMITTER),data=data.ac, REML=FALSE)
-fit.ac.sex<-lmer(log(ACCEL)~SEX+(1|TRANSMITTER),data=data.ac, REML=FALSE)
-fit.ac.year<-lmer(log(ACCEL)~YEAR+(1|TRANSMITTER),data=data.ac, REML=FALSE)
-fit.ac.null<-lmer(log(ACCEL)~(1|TRANSMITTER),data=data.ac, REML=FALSE)
-
-anova(fit.ac.full,fit.ac.sex)
-anova(fit.ac.full,fit.ac.year)
-anova(fit.ac.full,fit.ac.sex)
-summary(fit.ac.sex)
-plot(fit.ac.full)
-hist(residuals(fit.ac.full))
-
-coef(fit.ac.full)
 ```
 
 
