--- a/Summary2.Rmd
+++ b/Summary2.Rmd
@@ -1,6 +1,8 @@
 ---
-title: "summary"
-output: html_document
+title: "Summary"
+author: "David T. Callaghan"
+date: '`r format(Sys.time(), "%d %B, %Y")`'
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
@@ -9,19 +11,14 @@ library(printr)
 library(knitr)
 library(dplyr)
 load("SpawnClust.RData")
+
 ```
 
-## Cluster Parameters
+## Cluster Frequency Over Time
 
-```{r cluster_params}
+I created a frequency per individual plot of spawning clusters which nicely scaled the data among years. Each year has a nice spawning bump in the middle of September.
 
-kable(cluster[,c(1,2,4,8,12)])
-```
-
-## Cluster Frequency over time
-
-
-```{r spawn_time, fig.height=11, fig.width= 8.5}
+```{r spawn_time, fig.height=9, fig.width= 8.5}
 
 
 
@@ -47,21 +44,21 @@ peakdates.g14<-peakdates(date=spawn.num.14$DATE,freq=spawn.num.14$FREQ14)
 par(mfrow=c(3,1))
 
 #2012
-plot(FREQ/24~DATE,data=spawn.num.12,ylim=c(0,3),
+plot(FREQ/24~DATE,data=spawn.num.12,ylim=c(0,3), main="2012",ylab="Freq per Fish",xlab="",
      xlim=as.POSIXct(c("2012-08-15","2012-10-15"),format="%Y-%m-%d", tz="MST"),type="h",col="grey",
      lwd=6,lend=2)
 lines(c(peakdates.12$START-12*60*60,peakdates.12$START-12*60*60),c(-1,3.5))
 lines(c(peakdates.12$END+12*60*60,peakdates.12$END+12*60*60),c(-1,3.5))
 
 #2013 group 2013
-plot(FREQ13/9~DATE,data=spawn.num.13,ylim=c(0,3),
+plot(FREQ13/9~DATE,data=spawn.num.13,ylim=c(0,3), main="2013", ylab="Freq per Fish",xlab="",
      xlim=as.POSIXct(c("2013-08-15","2013-10-15"),format="%Y-%m-%d", tz="MST"), type="h",col="grey",
      lwd=6,lend=2)
 lines(c(peakdates.g13$START-12*60*60,peakdates.g13$START-12*60*60),c(-1,3.5))
 lines(c(peakdates.g13$END+12*60*60,peakdates.g13$END+12*60*60),c(-1,3.5))
 
 #2014 group 2014
-plot(FREQ14/3~DATE,data=spawn.num.14,ylim=c(0,3),
+plot(FREQ14/3~DATE,data=spawn.num.14,ylim=c(0,3), main="2014", ylab="Freq per Fish",xlab="",
      xlim=as.POSIXct(c("2014-08-15","2014-10-15"),format="%Y-%m-%d", tz="MST"),type="h",col="grey",
      lwd=6,lend=2)
 lines(c(peakdates.g14$START-12*60*60,peakdates.g14$START-12*60*60),c(-1,3))
@@ -74,9 +71,12 @@ par(mfrow=c(1,1))
 
 ```
 
+
 ##Spawning Shoal Use
 
-```{r }
+Below is a bubble pie plot showing cumulative frequency of use for all years (bubble size) and relative use among years (pie slices). It's a bit messy but fun to look at!
+
+```{r fig.height=9.5, fig.width=8 }
 
 
 library(mapplots)
@@ -108,66 +108,11 @@ legend.bubble(650800,6953525, z=23, round=1, n=1, maxradius=25, bty="n",txt.col=
 text(650875,6953525,"23", cex=0.6) 
 legend.bubble(650800,6953462, z=12, round=1, n=1, maxradius=13, bty="n",txt.col="transparent")
 text(650862,6953462, "12", cex=0.5)               
+```
+\newpage
+Next I plotted the data from the bubble pie graph and created a sorted horizontal frequency distribution to get a better idea of use among sites.
 
-
-
-#determine max frequency
-max.all<-max(first.clust$FREQ)
-
-#2012
-data<-filter(first.clust,YEAR==2012)
-#determine scaling factor
-s=max(data$FREQ)/max.all
-
-plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
-
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-         maxradius=200*s, col=alpha("pink", 0.3),pch=19)
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("red",0.3))
-
-
-legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
-              col=alpha("pink",0.3), txt.cex = 0.7, txt.col="transparent")
-legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
-              col=alpha("red",0.3),txt.cex = 0.7, txt.col = alpha("red",0.3))
-
-
-#2013
-data<-filter(first.clust,YEAR==2013)
-#determine scaling factor
-s=max(data$FREQ)/max.all
-plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
-
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("pink", 0.3),pch=19)
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("red",0.3))
-
-
-legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
-              col=alpha("pink",0.3), txt.cex = 0.7, txt.col="transparent")
-legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
-              col=alpha("red",0.3),txt.cex = 0.7, txt.col = alpha("red",0.3))
-
-
-#2014
-data<-filter(first.clust,YEAR==2014)
-#determine scaling factor
-s=max(data$FREQ)/max.all
-
-plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
-
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("pink", 0.3),pch=19)
-draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
-            maxradius=200*s, col=alpha("red",0.3))
-
-
-legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
-              col=alpha("pink",0.3), txt.cex = 0.7, txt.col="transparent")
-legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
-              col=alpha("red",0.3),txt.cex = 0.7, txt.col = alpha("red",0.3))
+```{r, fig.height=11, fig.width=8.5}
 
 data<-table(ltspawnclust$YEAR,ltspawnclust$SITE)
 data<-data[,order(colSums(data))]
@@ -192,12 +137,91 @@ axis(1,pos=0)
 
   
 ```
+\newpage
+Next I created a series of bubble plots for each year where the bubble size represents frequency of use in that year.
 
+```{r, fig.height=9.5 ,fig.width=8}
+
+
+#determine max frequency
+max.all<-max(first.clust$FREQ)
+
+#2012
+data<-filter(first.clust,YEAR==2012)
+#determine scaling factor
+s=max(data$FREQ)/max.all
+
+plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
+
+draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
+         maxradius=200*s, col=alpha("lightblue", 0.3),pch=19)
+draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
+            maxradius=200*s, col=alpha("blue",0.3))
+
+
+legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
+              col=alpha("lightblue",0.3), txt.cex = 0.7, txt.col="transparent")
+legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
+              col=alpha("blue",0.3),txt.cex = 0.7, txt.col = alpha("blue",0.3))
+```
+```{r, fig.height=9.5 ,fig.width=8}
+
+
+#2013
+data<-filter(first.clust,YEAR==2013)
+#determine scaling factor
+s=max(data$FREQ)/max.all
+plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
+
+draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
+            maxradius=200*s, col=alpha("lightblue", 0.3),pch=19)
+draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
+            maxradius=200*s, col=alpha("blue",0.3))
+
+
+legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
+              col=alpha("lightblue",0.3), txt.cex = 0.7, txt.col="transparent")
+legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
+              col=alpha("blue",0.3),txt.cex = 0.7, txt.col = alpha("blue",0.3))
+
+```
+\newpage
+It is a tough to see the frequency bubbles in 2014, but I wanted to maintain the same scale as the previous years.
+```{r, fig.height=9.5 ,fig.width=8}
+#2014
+data<-filter(first.clust,YEAR==2014)
+#determine scaling factor
+s=max(data$FREQ)/max.all
+
+plot(shore_outline, main=data$YEAR[1], col="grey90",border="grey70")
+
+draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
+            maxradius=200*s, col=alpha("lightblue", 0.3),pch=19)
+draw.bubble(z=data$FREQ, x=data$CLUST.X, y=data$CLUST.Y, 
+            maxradius=200*s, col=alpha("blue",0.3))
+
+
+legend.bubble(650800,6954000, z=max.all, round=1, n=3, maxradius=200, bty="n",pch=19,
+              col=alpha("lightblue",0.3), txt.cex = 0.7, txt.col="transparent")
+legend.bubble(650800,6954000, z=max.all, round=0, n=3, maxradius=200, bty="n",
+              col=alpha("blue",0.3),txt.cex = 0.7, txt.col = alpha("blue",0.3))
+```
+\newpage
+
+##Basic Lake Trout Movement Analysis
+
+Below is a summary of mean daily displacement, persistence index (closer to 1 means straight line, closer to -1 is circles), mean daily acceleration and thier associated standard deviations for male, female and unkown lake trout over 3 years (2012-2014).
 ```{r}
+
 data<-spawntable[spawntable$MONTH==9,]
-data$ACCEL.SD[is.nan(data$ACCEL.SD)]<-"-"
-data$ACCEL.MEAN[is.nan(data$ACCEL.MEAN)]<-"-"
-kable(data)
+#remove month
+data<-data[,-2]
+
+#data$ACCEL.SD[is.nan(data$ACCEL.SD)]<-"-"
+#data$ACCEL.MEAN[is.nan(data$ACCEL.MEAN)]<-"-"
+kable(data, col.names=c("Year","Sex","n","Daily Displacement","Std. Dev.",
+                        "Persistence Index","Std. Dev.",
+                        "Accel","Std. Dev."),digits=2,align="c")
 ```
 ```{r, echo=FALSE, messages=FALSE, cache=FALSE}
 
@@ -222,11 +246,24 @@ require(MuMIn)
 require(lattice)
 require(car)
 library(effects)
+library(stargazer)
 ```
+#Daily Displacement
+
+Here I show square root transformed daily displacement data (sqrt(STEPLENGTH)) for each lake trout over the course of Septmeber. The different colours represent different years. The trend lines generally show a curvelinear relationship for daily displacement over time.
+
 ```{r}
 xyplot(sqrt(STEPLENGTH) ~ DAY|TRANSMITTER, groups=YEAR, type=c("p","smooth"), data=data)
 
 ```
+Next I will run a linear mixed effects model to determine if daily displacment differs between sexes. The model uses individuals nested in year as random intercepts to address repeated measures and AR1 correlation structure to address independence.
+
+The full model is as follows:
+
+$$\sqrt{Daily Displacement} \sim Sex + Day + Day^{2} + Year + random (1|Transmitter:Year)$$ 
+
+Model results shown below indicate no significant difference in daily displacement between sexes but that thier is a significant curvelinear relationship with days as well as among years. The figure indicates how these effects relate to daily displacement---note that it is square root transformed to meet parametric assumptions).
+
 ```{r}
 #test if random effect better than linear regression
 #linear model
@@ -268,7 +305,7 @@ mod2<-lme(sqrt(STEPLENGTH)~SEX+cDAY+I(cDAY^2)+YEAR, random=~1|TRANSMITTER, corre
 
 
 #drop SEX
-#mod2.a<-update(mod2,.~.-SEX)
+mod2.a<-update(mod2,.~.-SEX)
 #check significance of SEX
 #anova(mod2,mod2.a)# looks to be insignificant and can be dropped from full model
 
@@ -293,9 +330,14 @@ mod2<-lme(sqrt(STEPLENGTH)~SEX+cDAY+I(cDAY^2)+YEAR, random=~1|TRANSMITTER, corre
 
 #full model
 mod.dd<-mod2
-Anova(mod.dd,type=2)
-#r.squaredGLMM(mod.dd)
+best.dd<-mod2.a
 
+kable(Anova(mod.dd,type=2))
+#r.squaredGLMM(mod.dd)
+```
+
+
+```{r}
 plot(allEffects(mod.dd))
 #check assumptions
 #heterogeneity
@@ -310,6 +352,9 @@ plot(allEffects(mod.dd))
 
 ```
 
+#Persistence Index
+
+Here is the same plot as before but for persistence index. No transformation was required.
 
 ```{r}
 
@@ -320,7 +365,12 @@ plot(allEffects(mod.dd))
 
 #boxplot(PERSINDEX~SEX*YEAR,data=data)
 xyplot(PERSINDEX ~ DAY|TRANSMITTER, groups=YEAR, type= c("p","smooth"), data=data)
+```
 
+I also ran the same mixed model parameters for persitence index. The results show that there is a significant difference between sexes in terms of persistence index with significant changes among days (note days^2 is not significant indicating a linear day relationship) and years.
+
+
+```{r}
 
 #test if random effect better than linear regression
 #linear model
@@ -364,7 +414,7 @@ mod2<-lme(PERSINDEX~SEX+cDAY+I(cDAY^2)+YEAR, random=~1|TRANSMITTER, correlation=
 #anova(mod2,mod2.b)# significant!
 
 #drop DAY^2
-#mod2.c<-update(mod2,.~.-I(cDAY^2))
+mod2.c<-update(mod2,.~.-I(cDAY^2))
 #check significance of DAY^2
 #anova(mod2,mod2.c)# insignificant
 
@@ -378,9 +428,15 @@ mod2<-lme(PERSINDEX~SEX+cDAY+I(cDAY^2)+YEAR, random=~1|TRANSMITTER, correlation=
 #best model
 
 mod.pi<-mod2
+best.pi<-mod2.c
 #r.squaredGLMM(mod.pi)
 
-Anova(mod.pi,type=2)
+kable(Anova(mod.pi,type=2))
+```
+
+The figure below illustrates the relationships between parameters and persistence index.
+
+```{r}
 plot(allEffects(mod.pi))
 
 #check assumptions
@@ -394,6 +450,11 @@ plot(allEffects(mod.pi))
 #acf(residuals(mod.pi,type="normalized"))
 
 ```
+
+#Daily Mean Acceleration
+
+Here is the same plot from previously but for daily mean acceleration. This was log trasnformed to meet parametric assumptions. Notice the strong horseshoe relationship---looks to be occuring during peak spawn.
+
 ```{r}
 
 ###Acceleration
@@ -411,7 +472,11 @@ data.ac<-data.ac[!is.na(data.ac$ACCELMEAN),]
 ```
 ```{r}
 xyplot(log(ACCELMEAN) ~ DAY|TRANSMITTER, group=YEAR, type= c("p", "smooth"), data=data.ac)
+```
 
+I also ran the same mixed model parameters for daily mean acceleration but need to adjust the random component to transmitter since we only had two years of accelerometer data. The results show that there is a significant difference (although not very convincing...) between sexes in terms of acceration with significant changes among days^2 but not days or years.
+
+```{r}
 
 #test if random effect better than linear regression
 #linear model
@@ -442,13 +507,13 @@ mod2<-lme(log(ACCELMEAN)~SEX+cDAY+I(cDAY^2)+YEAR, random=~1|TRANSMITTER, correla
 #mod2.a<-update(mod2,.~.-SEX)# drop interaction
 #anova(mod2,mod2.a)#not significant remove
 
-#mod2.b<-update(mod2,.~.-cDAY)# drop interaction
+mod2.b<-update(mod2,.~.-cDAY)# drop interaction
 #anova(mod2,mod2.b)#not significant remove
 
 #mod2.c<-update(mod2,.~.-I(cDAY^2))# drop interaction
 #anova(mod2,mod2.c)#not significant remove
 
-#mod2.d<-update(mod2,.~.-YEAR)# drop interaction
+mod2.d<-update(mod2.b,.~.-YEAR)# drop interaction
 #anova(mod2,mod2.d)
 #not significant remove
 #best model
@@ -456,10 +521,11 @@ mod2<-lme(log(ACCELMEAN)~SEX+cDAY+I(cDAY^2)+YEAR, random=~1|TRANSMITTER, correla
 
 
 mod.ac<-mod2
+best.ac<-mod2.d
 #mod.ac<-update(mod.ac,.~.-YEAR)
 
 #r.squaredGLMM(mod.ac)
-Anova(mod.ac,type=2)
+kable(Anova(mod.ac,type=2))
 #check assumptions
 #heterogeneity
 #plot(fitted(mod.ac), residuals(mod.ac, type="normalized"), xlab = "Fitted Values", ylab = "Residuals")
@@ -469,13 +535,61 @@ Anova(mod.ac,type=2)
 #hist(residuals(mod.ac,type="normalized"))
 #independence
 #acf(residuals(mod.ac,type="normalized"))
+```
 
-
+```{r}
 plot(allEffects(mod.ac))
 
-
  ```
+ 
+ \newpage
 
+ 
+A summary of all best models (insignificant predictors dropped) and coefficients is shown below. Note these coefficients have not been back-transformed!
 
+\begin{table}[!htbp] \centering 
+  \caption{} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}}lccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{3}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-4} 
+\\[-1.8ex] & sqrt(STEPLENGTH) & PERSINDEX & log(ACCELMEAN) \\ 
+\\[-1.8ex] & (1) & (2) & (3)\\ 
+\hline \\[-1.8ex] 
+ SEXM &  & $-$0.147$^{***}$ & 0.245$^{*}$ \\ 
+  &  & (0.037) & (0.116) \\ 
+  & & & \\ 
+ cDAY & 0.832$^{***}$ & 0.006$^{***}$ &  \\ 
+  & (0.178) & (0.001) &  \\ 
+  & & & \\ 
+ I(cDAY$\hat{\mkern6mu}$2) & $-$0.057$^{***}$ &  & $-$0.002$^{***}$ \\ 
+  & (0.019) &  & (0.001) \\ 
+  & & & \\ 
+ YEAR2013 & $-$24.266$^{***}$ & $-$0.052 &  \\ 
+  & (4.838) & (0.033) &  \\ 
+  & & & \\ 
+ YEAR2014 & $-$49.946$^{***}$ & $-$0.180$^{***}$ &  \\ 
+  & (5.466) & (0.037) &  \\ 
+  & & & \\ 
+ Constant & 111.651$^{***}$ & 0.246$^{***}$ & $-$0.915$^{***}$ \\ 
+  & (6.147) & (0.041) & (0.094) \\ 
+  & & & \\ 
+\hline \\[-1.8ex] 
+Observations & 668 & 668 & 309 \\ 
+Log Likelihood & $-$2,889.275 & 107.961 & $-$63.892 \\ 
+Akaike Inf. Crit. & 5,794.551 & $-$199.921 & 139.783 \\ 
+Bayesian Inf. Crit. & 5,830.585 & $-$163.887 & 162.183 \\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table} 
+
+ 
+ 
+ 
+ 
 
 
